<resources>
    <string name="app_name">ChatApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="username">Username</string>
    <string name="log_out">Log out</string>
    <string name="back_to_register">Back to register</string>
</resources>